New branch Create
1) Menu screen design and functionality  2) Send-Wallet screen
3) Recive -Wallet design from old layout

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -33,12 +33,12 @@
         android:id="@+id/scan_clipboard_buttons_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:filterTouchesWhenObscured="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/main_button_scan_qr_code"
