--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <!--<item name="android:colorPrimaryDark">@color/action_bar</item>-->
+        <item name="android:colorPrimaryDark">@color/dark_grey</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
         <item name="android:buttonStyle">@style/RobotoButtonStyle</item>
@@ -10,11 +10,13 @@
 
     <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">@color/white</item>
+
     </style>
 
     <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
         <item name="android:fontFamily">sans-serif-light</item>
-        <item name="android:textColor">@color/dark_blue</item>
-
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/border_background</item>
     </style>
 </resources>
